data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4187.wast
;; 6. **Test for Proper Operand Consumption within Infinite Loop**:    Use `call_indirect` within a loop that consumes operands but due to a bug in the type checking or operand handling, operands are not consumed correctly leading to infinite execution.

(assert_invalid
  (module
    (type (func (param i32) (param i32) (result i32)))
    (table 1 funcref)
    (func (result i32)
      (block (loop
        (i32.const 0)
        (i32.const 1)
        (call_indirect (type 0) (i32.const 0))
        (br 1)
      ))
    )
  )
  "type mismatch"
)